--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "dev-releases-action",
+  "name": "dev-version",
   "version": "0.0.1",
   "main": "index.js",
-  "repository": "git@github.com:codaline-io/dev-releases.git",
+  "repository": "git@github.com:codaline-io/dev-version.git",
   "homepage": "http://www.codaline.io",
   "author": "codaline - Marcus Kirsch & Bengt Weiße GbR <mail@codaline.io>",
+  "license": "MIT",
+  "scripts": {
+    "package": "ncc build index.js -o dist"
+  },
   "dependencies": {
-    "@actions/core": "^1.2.1",
-    "@actions/github": "^2.0.1"
+    "@actions/core": "^1.2.2"
+  },
+  "devDependencies": {
+    "@zeit/ncc": "^0.21.0"
   }
 }
