--- a/action.yml
+++ b/action.yml
@@ -1,17 +1,17 @@
-name: 'Dev Releases'
-description: 'Create Dev Releases'
+name: 'Dev version'
+description: 'Creates a dev version'
 inputs:
   branch:
     description: 'Branch of current execution'
-    required: true
+    required: false
     default: 'master'
   filePath:
-    description: 'Path to file with version key'
-    required: true
+    description: 'Path to json file with version key'
+    required: false
     default: 'package.json'
 outputs:
   version:
-    description: 'New generated Version number'
+    description: 'New generated version number'
 runs:
   using: 'node12'
   main: 'dist/index.js'
