--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,25 +21,25 @@ jobs:
     - name: echo simple version
       run: echo ${{ steps.createSimpleVersion.outputs.version }}
 
-    - name: Create version with complex branch name
-      uses: ./
-      id: createComplexVersion
-      with:
-        branch: feat/testi-test
-    - name: echo complex version
-      run: echo ${{ steps.createComplexVersion.outputs.version }}
+    # - name: Create version with complex branch name
+    #   uses: ./
+    #   id: createComplexVersion
+    #   with:
+    #     branch: feat/testi-test
+    # - name: echo complex version
+    #   run: echo ${{ steps.createComplexVersion.outputs.version }}
 
-    - name: Create json with custom version
-      run: |
-        mkdir test
-        cd test
-        echo '{"version": "test-beta.1"}' > package.json
+    # - name: Create json with custom version
+    #   run: |
+    #     mkdir test
+    #     cd test
+    #     echo '{"version": "test-beta.1"}' > package.json
 
-    - name: Increase version
-      uses: ./
-      id: createBumpVersion
-      with:
-        branch: test
-        filePath: test/package.json
-    - name: echo complex version
-      run: echo ${{ steps.createBumpVersion.outputs.version }}
+    # - name: Increase version
+    #   uses: ./
+    #   id: createBumpVersion
+    #   with:
+    #     branch: test
+    #     filePath: test/package.json
+    # - name: echo complex version
+    #   run: echo ${{ steps.createBumpVersion.outputs.version }}
