--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,32 +8,53 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Create test folder
+      run: mkdir test
+
+    - name: Create json with simple version
+      run: |
+        echo '{"version": "1.0.0"}' > test/package.json
     - name: Create simple version
       uses: ./
       id: createSimpleVersion
       with:
         branch: dev
-    - name: echo simple version
-      run: echo ${{ steps.createSimpleVersion.outputs.version }}
+        filePath: test/package.json
+    - name: test simple version
+      run: |
+        if ["${{ steps.createSimpleVersion.outputs.version }}" != "1.0.0-dev.1"]; then
+          echo "Received: ${{ steps.createSimpleVersion.outputs.version }}, but expected 1.0.0-dev.1"
+          exit 1
+        fi
 
+    - name: Create json with for complex version
+      run: |
+        echo '{"version": "1.0.0"}' > test/package.json
     - name: Create version with complex branch name
       uses: ./
       id: createComplexVersion
       with:
         branch: feat/testi-test
-    - name: echo complex version
-      run: echo ${{ steps.createComplexVersion.outputs.version }}
-
-    - name: Create json with custom version
+        filePath: test/package.json
+    - name: test complex version
       run: |
-        mkdir test
-        cd test
-        echo '{"version": "1.0.0-test.1"}' > package.json
+        if ["${{ steps.createComplexVersion.outputs.version }}" != "1.0.0-feat-testi-test.1"]; then
+          echo "Received: ${{ steps.createComplexVersion.outputs.version }}, but expected 1.0.0-feat-testi-test.1"
+          exit 1
+        fi
+
+    - name: Create json with exiting dev version
+      run: |
+        echo '{"version": "1.0.0-test.1"}' > test/package.json
     - name: Increase version
       uses: ./
       id: createBumpVersion
       with:
         branch: test
         filePath: test/package.json
-    - name: echo complex version
-      run: echo ${{ steps.createBumpVersion.outputs.version }}
+    - name: test version bump
+      run: |
+        if ["${{ steps.createBumpVersion.outputs.version }}" != "1.0.0-test.2"]; then
+          echo "Received: ${{ steps.createBumpVersion.outputs.version }}, but expected 1.0.0-test.2"
+          exit 1
+        fi
