--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,3 +55,19 @@ jobs:
       run: |
         echo "Received: ${{ steps.createBumpVersion.outputs.version }}, but expected 1.0.0-test.2"
         exit 1
+
+    - name: Create json with for complex version + no number suffix
+      run: |
+        echo '{"version": "1.0.0"}' > test/package.json
+    - name: Create version with complex branch name without suffix
+      uses: ./
+      id: createComplexVersion
+      with:
+        branch: feat/testi-test
+        filePath: test/package.json
+        withoutNumber: true
+    - name: test complex version without suffix
+      if: steps.createComplexVersion.outputs.version != '1.0.0-feat-testi-test'
+      run: |
+        echo "Received: ${{ steps.createComplexVersion.outputs.version }}, but expected 1.0.0-feat-testi-test"
+        exit 1
