--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
   withoutNumber:
     description: 'Deactivates the number suffix + increment'
     required: false
-    default: false
+    default: 'false'
 outputs:
   version:
     description: 'New generated version number'
