--- a/package.json
+++ b/package.json
@@ -31,15 +31,14 @@
     "lint": "eslint *.js"
   },
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.1"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.22.3",
+    "@vercel/ncc": "^0.38.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.55.0"
+    "eslint": "^8.57.0"
   },
   "volta": {
-    "node": "18.12.1",
-    "yarn": "3.3.1"
+    "node": "20.13.1"
   }
 }
